--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "common-tags": "^1.8.0",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
-    "git": "^0.1.5"
+    "git": "^0.1.5",
+    "mime": "^2.4.5"
   }
 }
