--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "common-tags": "^1.8.0",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
+    "eslint": "^7.1.0",
     "git": "^0.1.5",
-    "mime": "^2.4.5"
+    "mime": "^2.4.6"
   }
 }
