--- a/config.json
+++ b/config.json
@@ -3,6 +3,11 @@
     "token" : "Njk5Njc1NzIwMjA0NjgxMjM2.XpX6BQ.0j-6JO7VK2zPSffnztnDE5xOsfI",
     "bot_info" : {
         "name" : "Taco Bueno",
-        "Version" : "Beta 1.0.2"
-    } 
+        "Version" : "Beta 1.0.2",
+        "Author" : "El Primo the thicc gae God",
+        "Libary" : "Discord js v12.2.0",
+        "hosting_provider" : "Heroku",
+        "Platform" : "Windows 10 x64"
+    },
+    "BotColor" : ["#ff8b1c", "#fc251d", "#0faa17", "#059dfc", "#fee36b"]
 }
