--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "token" : "Njk5Njc1NzIwMjA0NjgxMjM2.XpX6BQ.0j-6JO7VK2zPSffnztnDE5xOsfI",
     "bot_info" : {
         "name" : "Taco Bueno",
-        "Version" : "Beta 1.0.2",
+        "Version" : "Stable 1.2.0",
         "Author" : "El Primo the thicc gae God",
         "Libary" : "Discord js v12.2.0",
         "hosting_provider" : "Heroku",
