switched to linux

--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
         "Author" : "El Primo the thicc gae God",
         "Libary" : "Discord js v12.2.0",
         "hosting_provider" : "Heroku",
-        "Platform" : "Windows 10 x64"
+        "Platform" : "LINUX MINT (DEIBAN BUSTER EDITION)"
     },
     "BotColor" : ["#ff8b1c", "#fc251d", "#0faa17", "#059dfc", "#fee36b"]
 }
