--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "common-tags": "^1.8.0",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.2.0",
+    "eslint": "^7.3.1",
     "git": "^0.1.5",
-    "mime": "^2.4.6"
+    "mime": "^2.4.6",
+    "n": "^6.5.1"
   }
 }
