--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.3.1",
     "git": "^0.1.5",
-    "mime": "^2.4.6",
-    "n": "^6.5.1"
+    "mime": "^2.4.6"
   }
 }
