--- a/config.json
+++ b/config.json
@@ -3,16 +3,16 @@
     "token" : "Njk5Njc1NzIwMjA0NjgxMjM2.XpX6BQ.0j-6JO7VK2zPSffnztnDE5xOsfI",
     "bot_info" : {
         "name" : "Taco Bueno",
-        "Version" : "Bullseye 1.2.5",
+        "Version" : "Stable / Canary 1.2.7",
         "Author" : "El Primo the thicc gae God",
         "Libary" : "Discord js v12.2.0",
         "hosting_provider" : "Heroku",
-        "Platform" : "LINUX MINT (DEIBAN BUSTER EDITION)"
+        "Platform" : "POPOS 20.04 LTS"
     },
     "BotColor" : ["#ff8b1c", "#fc251d", "#0faa17", "#059dfc", "#fee36b"],
 
     "Status" : {
-        "Message" : "El Primo's messages to Bull",
+        "Message" : "El Primo, Bull, and Colt having fun in the bushes",
         "Type" : ["WATCHING"]
     }
 }
