--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.4.0",
     "git": "^0.1.5",
-    "mime": "^2.4.6"
+    "mime": "^2.4.6",
+    "random-puppy": "^1.1.0"
   }
 }
