--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
     "BotColor" : ["#ff8b1c", "#fc251d", "#0faa17", "#059dfc", "#fee36b"],
 
     "Status" : {
-        "Message" : "Watchinh El Primo wrestle with colt ... in his bedroom.",
+        "Message" : "El Primo wrestle with colt ... in his bedroom.",
         "Type" : ["WATCHING"]
     }
 }
