--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
 		"no-shadow": ["error", { "allow": ["err", "resolve", "reject"] }],
 		"no-trailing-spaces": ["error"],
 		"no-var": "error",
+		"no-unused-vars": "warn",
 		"object-curly-spacing": ["error", "always"],
 		"quotes": ["error", "single"],
 		"semi": ["error", "always"],
