--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "git": "^0.1.5",
     "mime": "^2.4.6",
     "random-puppy": "^1.1.0",
-    "weather.js": "^0.1.0"
+    "weather-js": "^2.0.0"
   }
 }
