--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^12.2.0",
     "eslint": "^7.6.0",
+    "figlet": "^1.5.0",
     "git": "^0.1.5",
     "mime": "^2.4.6",
     "random-puppy": "^1.1.0",
