--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "figlet": "^1.5.0",
     "git": "^0.1.5",
     "mime": "^2.4.6",
+    "mongoose": "^5.10.7",
     "random-puppy": "^1.1.0",
     "weather-js": "^2.0.0"
   }
