--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "Dprefix" : "_",
-    "token" : "gut",
+    "token" : "Njk5Njc1NzIwMjA0NjgxMjM2.XpX6BQ.0j-6JO7VK2zPSffnztnDE5xOsfI",
     "bot_info" : {
         "name" : "Taco Bueno",
         "Version" : "v.2.8.6",
