security update attempt

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "Dprefix" : "_",
-    "token" : "c2TRG-lz9o7CEWDyDXZ5MVSNuZjWXlV5",
+    "token" : "Njk5Njc1NzIwMjA0NjgxMjM2.XpX1yw.mU54f3_nvtmh38n1zyHV0OMZe_Q",
     "bot_info" : {
         "name" : "Taco Bueno",
         "Version" : "v.2.8.6",
