--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.6.0",
     "figlet": "^1.5.0",
     "git": "^0.1.5",
