--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
     "BotColor" : ["#ff8b1c", "#fc251d", "#0faa17", "#059dfc", "#fee36b"],
 
     "Status" : {
-        "Message" : "El Primo do some weight lifting. 0-0",
+        "Message" : "El Primo take a break from working",
         "Type" : ["WATCHING"]
     }
 }
